--- a/src/app/assessment/page.module.css
+++ b/src/app/assessment/page.module.css
@@ -12,6 +12,15 @@
   font-family: var(--font-geist-sans);
 }
 
+.header {
+  background-image: url("/tryalma_cover.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 200px;
+  margin-bottom: 48px;
+}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -20,10 +29,11 @@
 }
 
 .intro,
-.introTitle {
-  text-align: center;
+.introTitle,
+.logo {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 12px;
 }
 
@@ -73,10 +83,59 @@ button.primary {
   border-radius: 6px;
   padding: 0 8px;
 }
+
 .form textarea {
   border: 1px solid rgb(0, 0, 0, 0.2);
   border-radius: 6px;
   padding: 12px;
+}
+
+.visaTypes label {
+  display: flex;
+  align-items: center;
+}
+
+.visaTypes input {
+  display: none;
+}
+
+.visaType {
+  padding: 5px 0;
+  cursor: pointer;
+}
+
+.visaTypes span {
+  position: relative;
+  line-height: 22px;
+}
+
+.visaTypes span:before,
+.visaTypes span:after {
+  content: "";
+}
+
+.visaTypes span:before {
+  border: 1px solid rgb(0, 0, 0, 0.2);
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.visaTypes span:after {
+  background: #222021;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  transition: 300ms;
+  opacity: 0;
+}
+
+.visaTypes input:checked+span:after {
+  opacity: 1;
 }
 
 @media (max-width: 720) {
