--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -15,16 +15,11 @@
 .main {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 48px;
+  width: 50%;
 }
 
-.ctas {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
-.ctas a {
+.submit button {
   border-radius: 12px;
   height: 48px;
   border: none;
@@ -39,37 +34,27 @@
   font-size: 20px;
 }
 
-a.primary {
+button.primary {
   background: var(--foreground);
   color: var(--background);
 }
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  width: 80%;
+  margin: auto;
 }
 
-@media (max-width: 600px) {
-  .welcome {
-    text-align: center;
-    font-size: 1.4rem;
-  }
+.form div {
+  display: flex;
+  flex-direction: column;
+}
 
-  .page {
-    padding: 10%;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 36px;
-    padding: 0 10px;
-  }
+.form input {
+  height: 32px;
+  border: 1px solid rgb(0, 0, 0, 0.2);
+  border-radius: 6px;
+  padding: 12px;
 }
